--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_auth: ^5.3.0
   firebase_core: ^3.5.0
   firebase_database: ^11.1.3
+  firebase_remote_config: ^5.1.2
   flutter:
     sdk: flutter
   get: ^4.6.6
