--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.6
+  get_it: ^8.0.0
   http: ^1.2.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
